test/corpus/strings.txt
==================
https://amzn.github.io/ion-docs/docs/spec.html#string
==================

null.string            // A null string value
""                     // An empty string value
" my string "          // A normal string
"\""                   // Contains one double-quote character
"\uABCD"               // Contains one unicode character

xml::"<e a='v'>c</e>"  // String with type annotation 'xml'

---

(document
  (null (type)) (comment)
  (string) (comment)
  (string) (comment)
  (string (escape)) (comment)
  (string (escape (unicode_escape))) (comment)
  (annotated (annotations (symbol (identifier))) (string)) (comment))
